# hiki-light

python/: .gitignore  README.md  characters.json  charactersFromDb.json  charsetup.py  chat.py  cleanDbChars.py  config.py  helpers.py  main.py  pyproject.toml  quickTest.py  requirements.txt  simChat.py  testChat.py
python/characters/: appearances.py  characterGen.py  ctPersonas.py  imagelookups.py  irlNpcs.py  likesAndDislikes.py  personalities.py  playerOptions.py
python/chatMechanics/: actionMechanics.py  actions.py  easterEggs.py  guide.py  interactions.py  interactionsNew.py  locations.py  promptBuilder.py  randomEvents.py
python/scraping/: scraper.py  testScrapedData.py
python/server/: auth.py  chat.py  db.py  eth.py  string.py  types.py  utils.py
python/simulation/: quickTest.py  testPrompt.py
